# blackmore

./: .gitignore  README.md  pyproject.toml
blackmore/: __init__.py  blackmore.py
